--- a/HACKING
+++ b/HACKING
@@ -71,8 +71,8 @@ of the file, replacing `<version>' with the version number of the new release.
 change should be added as a separate line and prefixed with an asterisk and a
 space character (`* ').  The last change should be followed by a blank line to
 separate the summary from that of the previous version.  At the top of the
-file, add the line "Changes in <version>", replacing `<version>' with the
-version number of the new release.
+file, add the line "Changes in version <version>", replacing `<version>' with
+the version number of the new release.
 
     Update the version number in `README', `configure.ac' and the manual pages
 in the `doc/' directory.  Change the date in each of the manual pages to the
