--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-02-19  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Released as version 2.2.0.
+
 2018-02-18  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Add libnetfilter_conntrack support for IP masquerading on Linux.
