--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-02-20  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Move configuration file out of src directory
+
 2018-02-19  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Released as version 2.2.0.
