--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -71,8 +71,8 @@ configuration file is \fB/etc/oidentd.conf\fP.
 .B "\-d or \-\-debug"
 Enable debugging. This causes debugging messages to be printed via syslog. This
 option can be useful when trying to track down the cause of failed lookups.
-Note that this option is only available if oidentd has been compiled with the
-\fB--enable-debug flag\fP.
+Note that this option is only available if \fBoidentd\fP has been compiled with
+the \fB--enable-debug\fP flag.
 
 .TP
 .B "\-e or \-\-error"
@@ -83,15 +83,15 @@ information to remote clients.
 .B "\-f or \-\-forward=[<port>]"
 When IP masquerading support is enabled, forward requests for machines that
 masquerade through us to those machines on the specified port. If a port is not
-given, oidentd will use the default port for the ident service ("auth" or port
-113). If the forwarded request fails, \fBoidentd\fP will fall back to reading
-the \fB/etc/oidentd_masq.conf\fP file. In order for forwarding to work, the
-machine to which the connection is forwarded must also be running oidentd, and
-oidentd must be run with the -P switch specifying the host that is forwarding
-the connections. If the ident daemon on the host to which the connection is
-forwarded is capable of returning a fixed string for any lookup (for example,
-the ident server built in to the mIRC windows IRC client), it is not necessary
-to run oidentd on that host.
+given, \fBoidentd\fP will use the default port for the ident service ("auth" or
+port 113). If the forwarded request fails, \fBoidentd\fP will fall back to
+reading the \fB/etc/oidentd_masq.conf\fP file. In order for forwarding to work,
+the machine to which the connection is forwarded must also be running
+\fBoidentd\fP, and \fBoidentd\fP must be run with the \fB-P\fP switch
+specifying the host that is forwarding the connections. If the ident daemon on
+the host to which the connection is forwarded is capable of returning a fixed
+string for any lookup (for example, the ident server built in to the mIRC
+windows IRC client), it is not necessary to run \fBoidentd\fP on that host.
 
 .TP
 .B "\-g or \-\-group=<group|GID>"
@@ -111,9 +111,7 @@ from listener utilities such as
 .BR xinetd (8)
 or
 .BR tcpserver (8).
-This option implies
-.B \-i
-(run in foreground) also.
+This option implies \fB-i\fP (run in foreground) also.
 
 .TP
 .B "\-l or \-\-limit=<number>"
@@ -145,9 +143,9 @@ Listen on the specified port.
 .TP
 .B "\-P or \-\-proxy=<host>"
 The specified host acts as a proxy, forwarding connections to us. This option
-must be enabled when connections on the machine on which oidentd is running are
-masqueraded through another host and the host through which the connections are
-masqueraded forwards requests to us.
+must be enabled when connections on the machine on which \fBoidentd\fP is
+running are masqueraded through another host and the host through which the
+connections are masqueraded forwards requests to us.
 
 .TP
 .B "\-q or \-\-quiet"
@@ -173,10 +171,10 @@ Run with specified username or UID.
 Perform lookups in the UDB shared memory tables, both for connections
 originating on the local host and for masqueraded connections. When a match is
 found, it will be used instead of the values supplied by the operating system,
-for either masqueraded entries (with the -m flag) or normal TCP connections.
-Entries in the table which don't match any local user will be returned
-verbatim. This allows oidentd to cooperate with other programs (e.g. RADIUS
-servers or proxies) to give valid replies for dynamic connections.
+for either masqueraded entries (with the \fB-m\fP flag) or normal TCP
+connections. Entries in the table which don't match any local user will be
+returned verbatim. This allows \fBoidentd\fP to cooperate with other programs
+(e.g. RADIUS servers or proxies) to give valid replies for dynamic connections.
 
 .TP
 .B "\-r or \-\-reply=<string>"
