--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -15,24 +15,24 @@
 oidentd_masq.conf - oidentd IP masquerading (NAT) configuration file.
 
 .SH DESCRIPTION
-If you are using IP masquerading or NAT, oidentd can optionally return a
-username for connections from other machines.  Support for this is specified by
-calling \fBoidentd\fP with the \-m (or \-\-masq) flag and by creating an
-\fB/etc/oidentd_masq.conf\fP file.
+If you are using IP masquerading or NAT, \fBoidentd\fP can optionally return a
+username for connections from other machines. Support for this is enabled by
+calling \fBoidentd\fP with the \fB\-m\fP (or \fB\-\-masq\fP) flag and by
+creating an \fB/etc/oidentd_masq.conf\fP file.
 .PP
 \fBoidentd\fP can also forward requests for an IP masqueraded connection to the
-machine from which connection originates by way of the -f option.  This will
-only work if the host to which the connection is forwarded is running oidentd
-with the -P (proxy) flag, or if the host's ident daemon will return a valid
-reply regardless of the input supplied by and the address of the host
-requesting the info (some ident daemons for windows do this, maybe others).
+machine from which the connection originates by way of the \fB\-f\fP option.
+This will only work if the host to which the connection is forwarded is running
+\fBoidentd\fP with the \fB\-P\fP (\fB\-\-proxy\fP) flag, or if the host's ident
+daemon returns a valid reply regardless of the input supplied by and the address
+of the host sending the request.
 
 .SH FORMAT
 <IP Address|Hostname>[/<Mask>] <Ident Response> <System Type>
 .PP
 The first field contains the IP address or the hostname of a machine that IP
-masquerades through the machine on which \fBoidentd\fP runs.  The mask
-parameter can be either a network mask or a mask in CIDR notation.  A mask of
+masquerades through the machine on which \fBoidentd\fP runs. The mask
+parameter can be either a network mask or a mask in CIDR notation. A mask of
 24 is equivalent to 255.255.255.0, a mask of 16 is equivalent to 255.255.0.0,
 etc.
 .PP
