--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -18,14 +18,20 @@ oidentd_masq.conf - oidentd IP masquerading (NAT) configuration file.
 If you are using IP masquerading or NAT, \fBoidentd\fP can optionally return a
 username for connections from other machines. Support for this is enabled by
 calling \fBoidentd\fP with the \fB\-m\fP (or \fB\-\-masq\fP) flag and by
-creating an \fB/etc/oidentd_masq.conf\fP file.
+creating an \fB/etc/oidentd_masq.conf\fP file. This file is read from top to
+bottom, and \fBoidentd\fP stops at the first matching entry it encounters.
 .PP
-\fBoidentd\fP can also forward requests for an IP masqueraded connection to the
-machine from which the connection originates by way of the \fB\-f\fP option.
-This will only work if the host to which the connection is forwarded is running
-\fBoidentd\fP with the \fB\-P\fP (\fB\-\-proxy\fP) flag, or if the host's ident
-daemon returns a valid reply regardless of the input supplied by and the address
-of the host sending the request.
+\fBoidentd\fP can also forward requests for an IP masqueraded connection to
+the machine from which the connection originates by way of the \fB\-f\fP (or
+\fB\-\-forward\fP) option. This will only work if the host to which the
+connection is forwarded is running \fBoidentd\fP with the \fB\-P\fP
+(\fB\-\-proxy\fP) flag, or if the host's ident daemon returns a valid reply
+regardless of the input supplied by and the address of the host sending the
+request.
+.PP
+When forwarding is enabled with the \fB\-f\fP option, \fBoidentd\fP forwards
+ident queries before reading the IP masquerading configuration file. If this
+is not desired, the \fB\-M\fP (or \fB\-\-forward\-last\fP) option can be used.
 
 .SH FORMAT
 <IP Address|Hostname>[/<Mask>] <Ident Response> <System Type>
@@ -46,21 +52,21 @@ parameter is running.
 .sp 1n
 .PD 0
 .TP 16
-.B <Host>[/<Mask>]		<Ident Response>	<System Type>
+.B "<Host>[/<Mask>]             <Ident Response>      <System Type>"
 .TP
-192.168.1.1				someone			UNIX
+192.168.1.1                   someone               UNIX
 .TP
-192.168.1.2				noone			WINDOWS
+192.168.1.2                   noone                 WINDOWS
 .TP
-192.168.1.1/32				user1			UNIX
+192.168.1.1/32                user1                 UNIX
 .TP
-192.168.1.0/24				user3			UNIX
+192.168.1.0/24                user2                 UNIX
 .TP
-192.168.0.0/16				user4			UNIX
+192.168.0.0/16                user3                 UNIX
 .TP
-somehost					user5			UNIX
+somehost                      user4                 UNIX
 .TP
-192.168.1.0/255.255.255.0	user6			UNIX
+192.168.1.0/255.255.255.0     user5                 UNIX
 .PD
 .LP
 
