--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2018-02-24  Janik Rabe  <oidentd@janikrabe.com>
 
+	* Make the -M option imply -f in addition to -m
 	* Don't assume sysconfdir is /etc
 		- Previously it was possible to specify a custom
 		  configuration file using the -C option, but the
