Replace --masq with --masquerade in manual pages
The correct option is --masquerade; however, --masq can still be
used due to getopt's behavior when only the first letters of a long
option are specified.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2018-02-24  Janik Rabe  <oidentd@janikrabe.com>
 
+	* Replace --masq with --masquerade in manual pages
 	* Make the -M option imply -f in addition to -m
 	* Don't assume sysconfdir is /etc
 		- Previously it was possible to specify a custom
