--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -118,7 +118,7 @@ This option implies \fB-i\fP (run in foreground) also.
 Allow, at most, the specified number of open connections at once.
 
 .TP
-.B "\-m or \-\-masq"
+.B "\-m or \-\-masquerade"
 Enable support for ident queries for masqueraded/NAT connections. See
 .BR oidentd_masq.conf (5)
 for details on configuring support for masqueraded/NAT connections.
