--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -17,7 +17,7 @@ oidentd_masq.conf - oidentd IP masquerading (NAT) configuration file.
 .SH DESCRIPTION
 If you are using IP masquerading or NAT, \fBoidentd\fP can optionally return a
 username for connections from other machines. Support for this is enabled by
-calling \fBoidentd\fP with the \fB\-m\fP (or \fB\-\-masq\fP) flag and by
+calling \fBoidentd\fP with the \fB\-m\fP (or \fB\-\-masquerade\fP) flag and by
 creating an \fB/etc/oidentd_masq.conf\fP file. This file is read from top to
 bottom, and \fBoidentd\fP stops at the first matching entry it encounters.
 .PP
