--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -124,7 +124,7 @@ Enable support for ident queries for masqueraded/NAT connections. See
 for details on configuring support for masqueraded/NAT connections.
 
 .TP
-.B "\-M or \-\-forward-last"
+.B "\-M or \-\-masquerade-first"
 Check IP masquerading file before forwarding.
 
 .TP
