--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -31,7 +31,8 @@ request.
 .PP
 When forwarding is enabled with the \fB\-f\fP option, \fBoidentd\fP forwards
 ident queries before reading the IP masquerading configuration file. If this
-is not desired, the \fB\-M\fP (or \fB\-\-forward\-last\fP) option can be used.
+is not desired, the \fB\-M\fP (or \fB\-\-masquerade\-first\fP) option can be
+used.
 
 .SH FORMAT
 <IP Address|Hostname>[/<Mask>] <Ident Response> <System Type>
