--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,10 @@
 2018-02-24  Janik Rabe  <oidentd@janikrabe.com>
 
-	* Replace --masq with --masquerade in manual pages
-	* Make the -M option imply -f in addition to -m
-	* Don't assume sysconfdir is /etc
+	* Rename --forward-last to --masquerade-first.
+		- Option --forward-last is now deprecated.
+	* Replace --masq with --masquerade in manual pages.
+	* Make the -M option imply -f in addition to -m.
+	* Don't assume sysconfdir is /etc.
 		- Previously it was possible to specify a custom
 		  configuration file using the -C option, but the
 		  path to /etc/oidentd_masq.conf was hardcoded.
