--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
+2018-03-10  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Allow only local NAT if /proc/net/ip_masquerade is used.
+
 2018-03-08  Petr Písař  <ppisar@redhat.com>
 
-	* Regenerate Bison header file using Automake
-	* Fix an out-of-bound read/write issue
-	* Check for fgets() failure when reading header lines
-	* Return error if masq_ct_line() cannot decide
+	* Regenerate Bison header file using Automake.
+	* Fix an out-of-bound read/write issue.
+	* Check for fgets() failure when reading header lines.
+	* Return error if masq_ct_line() cannot decide.
 
 2018-03-07  Janik Rabe  <oidentd@janikrabe.com>
 
