--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Unreleased changes
 
 	* Fixed an out-of-buffer read/write issue.
 	* Fixed several compiler warnings.
+	* Fixed incorrect order of lport and fport in manual pages.
+	* Allow to, fport, from and lport to be specified in any order.
 
 Changes in version 2.2.2
 
