--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Unreleased changes
 	* Fixed an out-of-buffer read/write issue.
 	* Fixed several compiler warnings.
 	* Fixed incorrect order of lport and fport in manual pages.
+	* Fixed lookup of connections to IPv6-mapped IPv4 addresses.
 	* Allow to, fport, from and lport to be specified in any order.
 
 Changes in version 2.2.2
