--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Unreleased changes
 
+	* Added Linux IPv6 masquerading support.
 	* Added build information to `--version` output.
 
 Changes in version 2.2.3
