--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2018-04-06  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Add Linux IPv6 masquerading support.
+	* Always use libnetfilter_conntrack when available.
 
 2018-04-04  Janik Rabe  <oidentd@janikrabe.com>
 
