--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Unreleased changes
 
 	* Added Linux IPv6 masquerading support.
 	* Added build information to `--version` output.
+	* Always use libnetfilter_conntrack when available.
 
 Changes in version 2.2.3
 
