--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Unreleased changes
 	* Added Linux IPv6 masquerading support.
 	* Added build information to `--version` output.
 	* Always use libnetfilter_conntrack when available.
+	* Fixed signed/unsigned bit shifting on Linux.
 
 Changes in version 2.2.3
 
