--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* Made a couple of function arguments constant.
 	* Fix incorrect conversion from ssize_t to int.
 	* Explicitly cast tv_sec to unsigned int.
+	* Fix incorrect vasprintf return type.
 
 2018-04-04  Janik Rabe  <oidentd@janikrabe.com>
 
