Remove unused type parameter from callback_nfct

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* Fix incorrect conversion from ssize_t to int.
 	* Explicitly cast tv_sec to unsigned int.
 	* Fix incorrect vasprintf return type.
+	* Remove unused type parameter from callback_nfct.
 
 2018-04-04  Janik Rabe  <oidentd@janikrabe.com>
 
