--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-04-07  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Fix a few signed/unsigned conversion issues.
+
 2018-04-06  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Separate declarations from code (ISO C90).
