--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-05-04  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Consistently use ssize_t in sock_read.
+
 2018-04-07  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Fix a few signed/unsigned conversion issues.
