--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Unreleased changes
 
+	* Added a forwarding capability.
 	* Added Linux IPv6 masquerading support.
 	* Added build information to `--version` output.
 	* Always use libnetfilter_conntrack when available.
