Fix a few signed/unsigned conversion issues

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* Change sock_write and sockprintf signatures.
 	* Change get_hostname to use socklen_t.
 	* Change get_ip to use socklen_t.
+	* Fix a few signed/unsigned conversion issues.
 
 2018-05-16  Jan Alexander Steffens  <jan.steffens@gmail.com>
 
