--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* Change get_hostname to use socklen_t.
 	* Change get_ip to use socklen_t.
 	* Fix a few signed/unsigned conversion issues.
+	* Add default cases to switch statements.
 
 2018-05-16  Jan Alexander Steffens  <jan.steffens@gmail.com>
 
