--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-06-13  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Fix build with libnetfilter_conntrack on Linux.
+
 2018-06-12  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Released as version 2.3.0.
