--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -92,6 +92,7 @@ specifying the host that is forwarding the connections. If the ident daemon on
 the host to which the connection is forwarded is capable of returning a fixed
 string for any lookup (for example, the ident server built in to the mIRC
 windows IRC client), it is not necessary to run \fBoidentd\fP on that host.
+This option implies \fB--masquerade\fP.
 
 .TP
 .B "\-g or \-\-group=<group|GID>"
