--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Unreleased changes
 
+	* Option `--forward` now implies `--masquerade`.
+
 Changes in version 2.3.1
 
 	* Fixed build with libnetfilter_conntrack on Linux.
