--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2018-06-24  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Make `--forward` imply `--masquerade`.
+	* Log warning when connection limit is exceeded.
 
 2018-06-13  Janik Rabe  <oidentd@janikrabe.com>
 
