--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2018-10-29  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Deprecate libudb support.
+
+2018-10-28  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Fix masquerading buffer lengths on Linux systems without `WANT_IPV6`.
+	* Narrow variable scopes.
+	* Remove unused variables.
+	* Fix sscanf unsigned integer specifications.
+	* Change `randval()` to use unsigned integers.
+
+2018-10-02  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Add systemd services and socket file.
+	* Show compile-time configuration in `--version` output.
+
+2018-09-27  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Improve error messages.
+
 2018-06-24  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Make `--forward` imply `--masquerade`.
