--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* Change masq() return type from bool to int.
 	* Change core_init() return type from bool to int.
+	* Change find_user() return type from bool to int.
+	* Change find_group() return type from bool to int.
 
 2018-10-29  Janik Rabe  <oidentd@janikrabe.com>
 
