Fix byte order of ports in libnfct queries

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Unreleased changes
 	* Added compile-time configuration to `--version` output.
 	* Fixed incorrect buffer lengths on Linux when compiled with `--disable-ipv6`.
 	* Deprecated libudb (user database library) support.
+	* Fixed incorrect byte order in libnetfilter_conntrack queries.
 
 Changes in version 2.3.1
 
