--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-13  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Fix byte order of ports in libnfct queries.
+
 2018-12-08  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Change masq() return type from bool to int.
