--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ Unreleased changes
 	* Fixed incorrect byte order in libnetfilter_conntrack queries.
 	* Fixed a null dereference with libnetfilter_conntrack on kernels without
 	  a connection tracking file.
+	* Build as a position-independent executable and with stack protection.
+	* Fixed an invalid comment style in the default oidentd_masq.conf file.
 
 Changes in version 2.3.1
 
