--- a/NEWS
+++ b/NEWS
@@ -4,11 +4,11 @@ Unreleased changes
 	* Added a warning when the connection limit is exceeded.
 	* Added systemd services and a socket file.
 	* Added compile-time configuration to `--version` output.
-	* Fixed incorrect buffer lengths on Linux when compiled with `--disable-ipv6`.
+	* Linux: fixed incorrect buffer lengths when compiled with `--disable-ipv6`.
 	* Deprecated libudb (user database library) support.
-	* Fixed incorrect byte order in libnetfilter_conntrack queries.
-	* Fixed a null dereference with libnetfilter_conntrack on kernels without
-	  a connection tracking file.
+	* Linux: fixed incorrect byte order in libnetfilter_conntrack queries.
+	* Linux: fixed a null dereference with libnetfilter_conntrack on kernels
+	  without a connection tracking file.
 	* Build as a position-independent executable and with stack protection.
 	* Fixed an invalid comment style in the default oidentd_masq.conf file.
 
