--- a/HACKING
+++ b/HACKING
@@ -1,7 +1,7 @@
 Modifying oidentd
 *****************
 
-Copyright (c) 2018 Janik Rabe
+Copyright (c) 2018-2019 Janik Rabe
 
     Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
@@ -72,12 +72,12 @@ change should be added as a separate line and prefixed with an asterisk and a
 space character (`* ').  The last change should be followed by a blank line to
 separate the summary from that of the previous version.  At the top of the
 file, add the line "Changes in version <version>", replacing `<version>' with
-the version number of the new release.
+the version number of the new release.  Before that line, prepend "Unreleased
+changes", followed by two blank lines, to the file.
 
     Update the version number in `README', `configure.ac' and the manual pages
 in the `doc/' directory.  Change the date in each of the manual pages to the
 release date of the new version.
 
-    Finally, run `make distcheck' to produce a release tarball.  This tarball
-can then be distributed to users in accordance with the terms described in
-the `COPYING' and `COPYING.DOC' files.
+    Finally, run `make distcheck' to produce a release tarball which can then
+be distributed to users.
