--- a/HACKING
+++ b/HACKING
@@ -80,4 +80,5 @@ in the `doc/' directory.  Change the date in each of the manual pages to the
 release date of the new version.
 
     Finally, run `make distcheck' to produce a release tarball which can then
-be distributed to users.
+be distributed to users.  If this command succeeds, archives in other formats
+can be created using `make dist-xz`, `make dist-bzip2`, and `make dist-zip`.
