--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-02-04  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Handle fork() errors.
+
 2019-01-03  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Released as version 2.3.2.
