--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-03-02  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Rewrite manual page oidentd(8).
+
 2019-02-04  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Handle fork() errors.
