--- a/doc/oidentd.8.adoc
+++ b/doc/oidentd.8.adoc
@@ -171,7 +171,7 @@ FILES
 
 AUTHOR
 ------
-Janik Rabe <oidentd@janikrabe.com>::
+mailto:oidentd@janikrabe.com[Janik Rabe]::
   https://oidentd.janikrabe.com
 
 Originally written by Ryan McCabe.
@@ -179,7 +179,7 @@ Originally written by Ryan McCabe.
 
 BUGS
 ----
-Please report any bugs to Janik Rabe <oidentd@janikrabe.com>.
+Please report any bugs to mailto:oidentd@janikrabe.com[Janik Rabe].
 
 
 SEE ALSO
